<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/animales_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            layout="@layout/boton_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            />

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/animales_tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/verdeOscuro"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animales_toolbar">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/itemAnimales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/animales" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/itemVacas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vacas" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/itemTerneros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terneros" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/itemToros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toros" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/animales_viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animales_tabLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>