<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/layout_veterinario_controles_titulo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/verde"
        android:gravity="center"
        android:text="titulo"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/descripcion"
        android:textColor="@color/verdeOscuro"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_veterinario_controles_titulo" />

    <EditText
        android:id="@+id/layout_veterinario_controles_descripcion"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="kjhr eroiu eroiu eroiu reoiu eroiuerr òuergò  òiurer efuw wiefuhwe iwefh we wiefuh iwehfgef iwue rwe"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_veterinario_controles_descripcion">

        <TextView
            android:layout_width="175dp"
            android:layout_height="50dp"
            android:layout_row="4"
            android:layout_column="0"
            android:gravity="center"
            android:text="@string/fecha"
            android:textColor="@color/verdeOscuro"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/layout_veterinario_controles_fecha"
            android:layout_width="225dp"
            android:layout_height="50dp"
            android:layout_row="4"
            android:layout_column="1"
            android:gravity="center"
            android:text="2020-10-10"
            android:textSize="25sp" />

        <TextView
            android:layout_width="175dp"
            android:layout_height="50dp"
            android:layout_row="5"
            android:layout_column="0"
            android:gravity="center"
            android:text="@string/animales"
            android:textColor="@color/verdeOscuro"
            android:textSize="30sp" />

        <GridView
            android:id="@+id/layout_veterinario_controles_animales"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_column="1"
            android:gravity="center"/>

    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>